k8's_objects/Deployment_RollingUpdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: packersmovers
    tier: backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 4
  replicas: 3
  minReadySeconds: 10
  selector:
    matchLabels:
      app: packersmovers
      tier: backend
  template:
    metadata:
      labels:
        app: packersmovers
        tier: backend
    spec:
      containers:
      - name: customer
        image: 573567580560.dkr.ecr.ap-south-1.amazonaws.com/customer:3
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
