k8's_objects/Service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: packersmovers
    tier: backend
spec:
  type: LoadBalancer
  selector:
    app: packersmovers
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
