k8's_objects/Service_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: packersmovers
spec:
  type: NodePort
  selector:
    app: packersmovers
  ports:
    - name: http
      protocol: TCP
      port: 8081
      # targetPort: 8081
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
